--- a/sass/style.scss
+++ b/sass/style.scss
@@ -408,6 +408,12 @@ p, label {
 		.background-image {
 			background-image: url("../images/projects/suggestion_box.png");
 		}
+	}
+
+	#rewards {
+		.background-image {
+			background-image: url("../images/projects/rewards.png");
+		}		
 	}	
 
 	#jsdrums {
