--- a/projects/suggestion_box/css/main.css
+++ b/projects/suggestion_box/css/main.css
@@ -1,10 +1,81 @@
+html {
+	height: auto;
+}
+
 body {
 	background: linear-gradient(to right bottom,rgba(74, 154, 203,1),rgba(116, 187, 213,1));
-	height: 100%;
 	font-family: 'Comfortaa';
 	color: white;
 	font-size: 1vw;
 	min-height: 100vh;
+}
+
+p {
+	margin-top: 0;
+	margin-bottom: 0;
+}
+
+div.full-app-greyout-filter, div.dialog {
+	position: fixed;
+    z-index: -1;
+    display: none;
+}
+
+div.full-app-greyout-filter {
+	height: 100vh;
+	width: 100vw;
+    opacity: 0.3;
+    background-color: black;
+}
+
+div.full-app-greyout-filter.active {
+	display: initial;
+	z-index: 1;
+}
+
+div.dialog.active {
+	transform: translate(-50%,-50%);
+	opacity: 1;
+	z-index: 1;
+}
+
+div.dialog {
+	opacity: 0;
+	display: initial;
+	position: fixed;
+	color: white;
+	height: 25%;
+	width: 35%;
+	top: 30%;
+	left: 50%;
+	background: linear-gradient(to right bottom,rgba(114,179,214,1),rgba(128, 190, 218,1));
+	padding: 2em;
+    transition: transform ease-in 300ms, opacity ease-in 200ms;
+    transform: translate(-50%,30vh);
+}
+
+div.dialog button {
+	width: 6em;
+	padding: 0.5em 1em;
+	background-color: white;
+	position: fixed;
+	bottom: 1em;
+	right: 1em;
+	transition: all 500ms;
+	color: #7fbeda;
+	font-weight: 600;
+	border: 1px solid white;
+	margin: 0;
+}
+
+div.dialog button:hover {
+	color: white;
+	background-color: transparent;
+	border: 1px solid white;
+} 
+
+div.dialog button:nth-of-type(2) {
+	right: 8em;
 }
 
 a {
@@ -14,15 +85,58 @@ a {
 
 a:hover {
 	text-decoration: none;
-	color: rgb(40,96,144);
+	color: rgb(60, 116, 194);
 }
 
 h1 {
+	margin-top: 0;
+	margin-bottom: 0;
 	font-family: 'Advent Pro';
+	display: inline-block;
 }
+
+.container-fluid {
+	padding: 0;
+	position: relative;
+}
+
+ul.nav {
+    display: inline-block;
+    float: right;
+    position: absolute;
+    top: 5%;
+    right: 0;
+}
+
+ul.nav h1 {
+}
+
+ul.nav li {
+	display: inline-block;
+	list-style-type: none;
+}
+
+ul.nav li a:hover, ul.nav li a:focus {
+	background-color: transparent;
+}
+
+.nav li.li-sign_in {
+	float: right;
+    font-size: 1.5em;
+}
+
+/*.header {
+	padding-top: 2em;
+}*/
+
+.header .messaging {
+	margin-top: 1.5vw;
+	padding-left: 0.25em;
+} 
 
 .main {
 	padding-bottom: 5em;
+	margin-top: 4em;
 }
 
 .row {
@@ -31,16 +145,20 @@ h1 {
 
 .suggestion-divider, .comment-divider {
 	border-bottom: 1px solid white;
-    display: inline-block;
-    vertical-align: top;    
+    display: block;
+    vertical-align: middle;
+	margin-top: 1.25em;
+
 }
 
 .suggestion-divider {
-    width: 30em;
+    width: 80%;
+    font-size: 1.5em;
 }
 
 .comment-divider {
-    width: 28em;
+    width: 80%;
+	margin:0.25em 0;    
 }
 
 
@@ -51,6 +169,7 @@ h1 {
 
 .suggestion-box-header {
 	font-size: 6em;
+    margin-top: 0.5em;	
 }
 
 .suggestion-box-header a {
@@ -62,23 +181,62 @@ h1 {
 	color: inherit;
 }
 
-.suggestion-container,.comment-container {
-	background-color: rgba(255,255,255,0.15);
-	padding-top: 1vw;
+.suggestion,.comment-container {
+	background: linear-gradient(to right bottom,rgba(114,179,214,1),rgba(128, 190, 218,1));
+	padding: 1em 1em;
 	margin-top: 3vw;
+	width: 100%;
+	height: 100%;
+	position: relative;
+
 }
 
-.suggestion-container:first-of-type {
-	margin-top: 6em;
+.suggestion.active, .comment.active {
+    position: relative;
+    z-index: 1;	
 }
 
-.comment-divider {
-	margin:0.25em 0;
+.comment.active {
+	background: linear-gradient(to right bottom,rgba(114,179,214,1),rgba(128, 190, 218,1));	
+}
+
+.suggestion:first-of-type {
+	margin-top: 2em;
 }
 
 .comment {
-	font-size: 1em;
 	margin-bottom: 0;
+	padding-top: 0.5em;
+	margin-top: 0.5em;
+	position: relative;
+}
+
+.comment-container .suggestion-content-container {
+	margin-bottom: 1em;
+	padding-left: 0.5em;
+}
+
+.comment-container .col-sm-12, .comment-container .col-sm-10 {
+	padding-right: 0;
+	padding-left: 0;
+}
+
+form.sign_in {
+	width: 45%;
+    margin: 10em auto 0 auto;
+    min-width: 300px;
+}
+
+form.sign_in button.btn {
+	width: 100%;
+}
+
+form.sign_in [name="user_name"] {
+	text-align: center;
+}
+
+
+form.form-comment {
 	margin-top: 2em;
 }
 
@@ -87,8 +245,8 @@ input.form-control {
 	background-color: rgba(255,255,255,0.15);
 	color: white;
 	border-radius: 0;
-	height: 3em;
-	font-size: 1.5em;
+	height: 2.5em;
+    font-size: 1.4em;
 }
 
 input.form-control::placeholder {
@@ -99,82 +257,205 @@ button.btn {
 	border-radius: 0;
 	font-size: 1.5em;
 	border: none;
-	position: absolute;
-	left: 50%;
-	transform: translateX(-50%);
+    display: block;
+    width: 200px;
+    margin: 0 auto;
 	width: 8em;
 }
+
+span.suggestion-number {
+	line-height: 1.1;
+}
+
 
 .suggestion-number-container, .suggestion-content-container {
 	display: inline-block;
 	position: relative;
 	vertical-align: top;
-}
-
-.suggestion-container .suggestion-number, .comment-container .suggestion-number {
-	font-size: 3em;
-	
-}
-
-.suggestion-number-container {
-	height: 100%;
-	line-height: 1;
+	padding: 0;
 }
 
 .suggestion-content-container {
 	height: 100%;
-	padding-bottom: 2.5em;
+	margin-right: 3.5em;
 }
 
-.comment-container p, .suggestion-content-container p, .suggestion-content-container a {
-	font-size: 1.25em;
+.suggestion .suggestion-number, .comment-container .suggestion-number {
+	font-size: 3em;
+	padding-right: 0.5em;
+	float: left;
+	
 }
+
+
+
+.suggestion-number-container p {
+	height: 100%;
+	line-height: 1;
+}
+
+/*.comment-container p, .suggestion-content-container p, .suggestion-content-container a {
+	font-size: 1.25em;
+}*/
 
 .comment-container .suggestion-content-container {
 	padding-bottom: 0.5em;
 }
 
-.suggestion-content-container .suggestion-title, .comment-container .suggestion-title {
-	font-size: 1.5em;
+.suggestion-content-container .title, .comment-container .title, .suggestion-content-container .suggestion-author, .comment-container .suggestion-author {
+	font-size: 1.25em;
+}
+
+.comment-container .title {
+	font-size: 	1.15em;
+}
+
+.suggestion-content-container span {
+	vertical-align: top;
+}
+
+span.title {
+	outline: none;
+}
+
+/*.suggestion-footer div {
+	display: inline-block;
+}*/
+
+.suggestion-footer div.comments-link-container {
+	float: right;
+}
+
+div.item-toolbar {
+	position: absolute;
+    right: 1em;
+    top: 1em;
+    font-size: 1em;
+    margin-left: 1em;
+}
+
+div.item-toolbar .glyphicon {
+	margin-left: 0.5em;
+}
+
+
+.author {
+	color: rgb(60, 116, 194);
 }
 
 .comments, .votes {
-	position: absolute;
-	bottom: 0;
 	margin-bottom: 0;
-	padding-right: 1vw;
-	padding-bottom: 0.5vw;
-}
-
-.comment {
-	padding-left: 8em;
-}
-
-.comments {
-	right: 0;
 }
 
 .votes {
-	left: 0;
-	margin-left: 1vw;
+	padding-right: 1vw;
+	position: static;
+}
+
+.suggestion-footer {
+	margin-top: 1.25em;	
+}
+
+.suggestion-footer div, .comment-footer div  {
+	padding: 0;
+}
+
+.comments {
+	float: right;
+}
+
+.votes div {
+	display: inline-block;
+}
+
+@media (max-width: 1024px) {
+
+	.main-container {
+		width: 90vw;
+	}
+
+	body {
+		font-size: 1.65vh;
+	}
+
+
+
 }
 
 @media (min-device-width: 360px) and (max-device-width: 1279px) and (min-device-height: 640px) {
 
 	body {
-		font-size: 1.5vw;
+		font-size: 2.25vw;
 	}
 
+	h1.suggestion-box-header {
+		font-size: 5em;
+	}
+
+	.suggestion-content-container {
+		height: 100%;
+		margin-right: 0;
+	}	
+
 	.main-container {
-		width: 85vw;
-	}		
+		width: 87.5vw;
+		padding-left: 0.15em;
+	}
+
+	.votes>div {
+		display: block;
+		width: 100%;
+	    text-align: left;
+
+	}
+
+	.suggestion-footer, .comment-footer {
+		font-size: 1.5em;
+	}
+
+	div.item-toolbar {
+		position: relative;
+		display: block;
+	    right: auto;
+	    top: auto;
+	    margin-left: 0;
+	}	
+
+	div.item-toolbar .glyphicon {
+	    margin-left: 0;
+	}
+
+	.suggestion-content-container {
+		margin-right: 0;
+	}
+ 
 
 }
 
 @media (max-device-width: 600px) and (min-device-height: 480px) and (max-device-height: 960px) {
 
 	body {
-		font-size: 2vw;
+		font-size: 2.5vw;
+	}
+
+	div.dialog {
+		width: 75vw;
+		height: 30vw;
+	}
+
+
+	.header .container-fluid h1 a {
+		font-size: 0.95em;
+	}
+
+	a {
+		transition: none;
+		color: white;
+	}
+
+	a:hover {
+		text-decoration: none;
+		color: white;
 	}
 
 }
@@ -182,7 +463,20 @@ button.btn {
 @media (max-device-width: 414px) and (max-device-height: 736px) {
 
 	body {
-		font-size: 2.25vw;
+		font-size: 4vw;
 	}
+
+	.header .container-fluid h1 a {
+		font-size: 0.6em;
+	}
+
+	.col-xs-1 {
+		width: 15%;
+	}
+
+	.col-xs-11 {
+		width: 85%;
+	}
+
 
 }
