--- a/css/style.css
+++ b/css/style.css
@@ -515,6 +515,12 @@ img.sm-logo {
   background-image: url("../images/projects/slider.jpg"); }
 .projects #suggestion_box .background-image {
   background-image: url("../images/projects/suggestion_box.png"); }
+.projects #bet_now .background-image {
+  padding: 0 1em;
+  background-size: 80%;
+  background-repeat: no-repeat;
+  background-image: url("../images/projects/bet-now-logo.png");
+  background-color: #000; }
 .projects #rewards .background-image {
   background-image: url("../images/projects/rewards.png"); }
 .projects #jsdrums .background-image {
