--- a/sass/helpers/_animations.scss
+++ b/sass/helpers/_animations.scss
@@ -30,49 +30,25 @@
 
 /* Slide Up */
 	@-moz-keyframes SlideUp {
-	    from {transform:translate3d(0,150px,0);
+	    from {transform:translateY(150px);
 	    	}
-	    to {transform:translate3d(0,0,0);
+	    to {transform:translateY(0px);
 	    	}    
 	}
 	@-webkit-keyframes SlideUp {
-	    from {transform:translate3d(0,150px,0);
+	    from {transform:translateY(150px);
 	    	}
-	    to {transform:translate3d(0,0,0);
+	    to {transform:translateY(0px);
 	    	}    
 	}
 	@keyframes SlideUp {
-	    from {transform:translate3d(0,150px,0);
+	    from {transform:translateY(150px);
 	    	}
-	    to {transform:translate3d(0,0,0);
+	    to {transform:translateY(0px);
 	    	}    
 	}
 
-	/* Fade In */
-	@-moz-keyframes SlideUp {
-	    from {transform:translate3d(0,150px,0);
-	    		opacity: 0;
-	    	}
-	    to {transform:translate3d(0,0,0);
-	    		opacity: 1;
-	    	}    
-	}
-	@-webkit-keyframes SlideUp {
-	    from {transform:translate3d(0,150px,0);
-	    		opacity: 0;
-	    	}
-	    to {transform:translate3d(0,0,0);
-	    		opacity: 1;
-	    	}    
-	}
-	@keyframes SlideUp {
-	    from {transform:translate3d(0,150px,0);
-	    		opacity: 0;
-	    	}
-	    to {transform:translate3d(0,0,0);
-	    		opacity: 1;
-	    	}    
-	}
+	//Slide left animation 
 
 	@keyframes SlideLeft {
 		from {transform: translate3d(100%,0,0);
